--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <!--
                     <a href="#service" class="nav-item nav-link">Notre service</a><-->
                     <a href="#Actualités" class="nav-item nav-link">Actualités</a>
-                    <a href="#outils" class="nav-item nav-link">Nos outils</a>
+                    <a href="#outils" class="nav-item nav-link">Outils</a>
                     <a href="" class="nav-item nav-link">Blog</a>
                     <!--create blog on cms ?<-->
                     <div class="nav-item dropdown">
@@ -221,7 +221,7 @@
                 <h1 class="display-6 mb-4">
                     Créons ensemble du contenu pédagogique multimédia
                 </h1>
-            </div>
+            </div>            
             <div class=" row g-4 justify-content-center cardRow">
                 <div class=" card2 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="  courses-item d-flex flex-column bg-white overflow-hidden h-100">
@@ -234,7 +234,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-6.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#rendez-vous">En savoir plus</a>
                                 <!--link to contact page <-->
                             </div>
                         </div>
@@ -251,7 +251,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-1.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#moodle">En savoir plus</a>
                                 <!--link to doc page + # <-->
                             </div>
                         </div>
@@ -268,7 +268,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-4.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#h5p">En savoir plus</a>
                                 <!--link to doc page + # <-->
                             </div>
                         </div>
@@ -285,7 +285,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-3.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html">En savoir plus</a>
                                 <!--link to doc page<-->
                             </div>
                         </div>
@@ -302,7 +302,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-2.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#genially">En savoir plus</a>
                                 <!--link to doc page + # <-->
                             </div>
                         </div>
@@ -319,7 +319,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-5.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#infographies">En savoir plus</a>
                                 <!--link to doc page + # ?<-->
                             </div>
                         </div>
@@ -336,7 +336,7 @@
                         <div class="position-relative mt-auto">
                             <img class="img-fluid" src="img/courses-7.webp" alt="" />
                             <div class="courses-overlay">
-                                <a class="btn btn-outline-primary border-2" href="">En savoir plus</a>
+                                <a class="btn btn-outline-primary border-2" href="documentation.html/#vidéo">En savoir plus</a>
                                 <!--link to doc page + # ?<-->
                             </div>
                         </div>
