--- a/index.html
+++ b/index.html
@@ -7,25 +7,27 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="" name="keywords" />
         <meta content="" name="description" />
-        <!-- Favicon -->
         <link href="./img/favicon.ico" rel="icon" />
-        <!-- Google Web Fonts -->
+        <!--FONTS-->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet" />
-        <!-- Icon Font Stylesheet -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Libraries Stylesheet -->
+        <!--STYLES -->
         <link href="lib/animate/animate.min.css" rel="stylesheet" />
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
-        <!-- Customized Bootstrap Stylesheet -->
         <link href="css/bootstrap.min.css" rel="stylesheet" />
-        <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet" />
     </head>
 
     <body>
+
+
+<video id="background-video" autoplay loop muted poster="">
+<source src="" type="video/mp4">
+</video>
+
         <!--lOADER-->
         <div id="spinner" class="show  position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
@@ -53,8 +55,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-plus-square ms-3"></i></a>
                         <div class="dropdown-menu bg-light m-0">
                             <a href="documentation.html" class="dropdown-item">Documentation</a>
-                            <a href="#équipe" class="dropdown-item">Notre équipe</a>
                             <a href="#témoignages" class="dropdown-item">Témoignages d'enseignants</a>
+                            <a href="#équipe" class="dropdown-item">Notre équipe</a>
                         </div>
                     </div>
                     <a href="contact.html" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block mainC">Nous contacter<i class="fa fa-arrow-right ms-3"></i></a>
@@ -209,7 +211,7 @@
             <iframe src="https://www.unimes.fr/fr/index.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;" class="shadow"></iframe>
             </div>
         </section>
-        
+
         <!--TOOLS-->
         <section id="outils" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
@@ -341,6 +343,7 @@
             </div>
             </div>
         </section>
+
         <!--TESTIMONIES-->
         <section id="témoignages" class="container-xxl py-6">
             <div class="container">
@@ -362,7 +365,7 @@
                                     Inutile de dire que sans le SNAP, mes X-mens n'auraient pas reçu la même formation.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Notre réalisation<i class="fa fa-search ms-3"></i></a>
+                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
                                 <hr class="w-25 mx-auto" />
                                 <h5>Professeur Xavier</h5>
                                 <span>Directeur / télépathe</span>
@@ -382,7 +385,7 @@
                                     et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Notre réalisation<i class="fa fa-search ms-3"></i></a>
+                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
                                 <hr class="w-25 mx-auto" />
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
@@ -402,7 +405,7 @@
                                     et tempor diam tempor erat.
                                 </p>
                                 <!--Mettre lien projets moodle<-->
-                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Notre réalisation<i class="fa fa-search ms-3"></i></a>
+                                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block testiBtn">Exemple de réalisation<i class="fa fa-search ms-3"></i></a>
                                 <hr class="w-25 mx-auto" />
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
@@ -412,6 +415,7 @@
                 </div>
             </div>
         </section>
+
         <!--TEAM-->
         <section id="équipe" class="container-xxl py-6">
             <div class="container">
@@ -535,6 +539,7 @@
                 </div>
             </div>
         </section>
+        
         <!--FOOTER-->
         <footer class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="container">
