--- a/index.html
+++ b/index.html
@@ -22,17 +22,13 @@
     </head>
 
     <body>
-
-
-<video id="background-video" autoplay loop muted poster="">
-<source src="" type="video/mp4">
-</video>
-
+        <video id="background-video" autoplay loop muted poster="./img/bckVid.mp4">
+            <source src="./img/bckVid.mp4" type="video/mp4">
+        </video>
         <!--lOADER-->
         <div id="spinner" class="show  position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
-
         <!--NAV-->
         <nav class="navbar navbar-expand-lg  navbar-light sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
@@ -63,7 +59,6 @@
                 </div>
             </div>
         </nav>
-
         <!--CAROUSEL-->
         <div class="container-fluid p-0 wow fadeIn" data-wow-delay="0.1s">
             <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
@@ -109,7 +104,6 @@
                 </button>
             </div>
         </div>
-
         <!--INTRO-->
         <section id="intro" class="container-fluid intro py-5 pt-lg-0">
             <div class="container py-5 pt-lg-0">
@@ -159,7 +153,6 @@
                 </div>
             </div>
         </section>
-
         <!--ABOUT-->
         <section id="about" class="container-xxl py-6">
             <div class="container">
@@ -199,7 +192,6 @@
                 </div>
             </div>
         </section>
-
         <!--ACTU-->
         <section id="Actualités" class="container-xxl py-6 Actu">
             <div class="container">
@@ -211,7 +203,6 @@
             <iframe src="https://www.unimes.fr/fr/index.html" frameborder="0" border="0" cellspacing="0" title="Site de l'Université de Nîmes" style="border-style: none;width: 100%; height: 100%;" class="shadow"></iframe>
             </div>
         </section>
-
         <!--TOOLS-->
         <section id="outils" class=" outils container-xxl courses my-6 py-6 pb-0">
             <div class="container">
@@ -343,7 +334,6 @@
             </div>
             </div>
         </section>
-
         <!--TESTIMONIES-->
         <section id="témoignages" class="container-xxl py-6">
             <div class="container">
@@ -415,7 +405,6 @@
                 </div>
             </div>
         </section>
-
         <!--TEAM-->
         <section id="équipe" class="container-xxl py-6">
             <div class="container">
@@ -539,7 +528,6 @@
                 </div>
             </div>
         </section>
-        
         <!--FOOTER-->
         <footer class="container-fluid bg-dark text-light footer my-6 mb-0 py-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="container">
