refacto 3/3 going to work on responsive

--- a/index.html
+++ b/index.html
@@ -22,9 +22,28 @@
     </head>
 
     <body>
+
+        <!--
         <video id="background-video" autoplay loop muted poster="./img/bckVid.mp4">
             <source src="./img/bckVid.mp4" type="video/mp4">
         </video>
+
+        <-->
+
+            <!--
+            <video id="background-video" autoplay loop muted poster="./img/bckVid2.mp4">
+            <source src="./img/bckVid2.mp4" type="video/mp4">
+        </video>
+
+        <-->
+
+            <video id="background-video" autoplay loop muted poster="./img/bckVid3.mp4">
+            <source src="./img/bckVid3.mp4" type="video/mp4">
+        </video>
+
+
+
+
         <!--lOADER-->
         <div id="spinner" class="show  position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
@@ -108,7 +127,7 @@
         <section id="intro" class="container-fluid intro py-5 pt-lg-0">
             <div class="container py-5 pt-lg-0">
                 <div class="row gx-0">
-                    <div class="col-lg-4 wow fadeIn" data-wow-delay="0.1s">
+                    <div class="col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">f
@@ -120,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 wow fadeIn" data-wow-delay="0.3s">
+                    <div class="col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
@@ -135,7 +154,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 wow fadeIn" id="service" data-wow-delay="0.5s">
+                    <div class="col-lg-3 wow fadeIn" id="service" data-wow-delay="0.5s">
                         <div class=" shadow d-flex align-items-center h-100 p-4" style="min-height: 150px">
                             <div class="d-flex">
                                 <div class="flex-shrink-0 btn-lg-square introIcon bg-primary">
@@ -156,14 +175,14 @@
         <!--ABOUT-->
         <section id="about" class="container-xxl py-6">
             <div class="container">
-                <div class="row g-5 shadow">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="row g-5 ">
+                    <div class="col-lg-6 wow fadeInUp shadow" data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px">
                             <img class="position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
                             <img class="position-absolute top-0 start-0  pe-3 pb-3" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
                     </div>
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="col-lg-6 wow fadeInUp shadow" data-wow-delay="0.5s">
                         <div class="h-100">
                             <h1 class="display-6 mb-4 aboutTitle">
                                 Nous accompagnons les enseignants dans leur transformation
@@ -409,12 +428,12 @@
         <section id="équipe" class="container-xxl py-6">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
-                    <h1 class="text-primary text-uppercase mb-2 title">
+                    <h1 class="text-primary text-uppercase mb-2 title ">
                         Notre équipe
                     </h1>
                 </div>
                 <div class="row g-0 team-items">
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-1.webp" alt="" />
@@ -433,7 +452,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-2.webp" alt="" />
@@ -452,7 +471,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-3.webp" alt="" />
@@ -471,7 +490,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-4.webp" alt="" />
@@ -490,7 +509,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-5.webp" alt="" />
@@ -506,7 +525,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="col-lg-2 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item position-relative">
                             <div class="position-relative teamImgWrap">
                                 <img class="img-fluid" src="img/team-6.webp" alt="" />
