--- a/index.html
+++ b/index.html
@@ -22,28 +22,15 @@
     </head>
 
     <body>
-
         <!--
         <video id="background-video" autoplay loop muted poster="./img/bckVid.mp4">
             <source src="./img/bckVid.mp4" type="video/mp4">
         </video>
 
         <-->
-
-            <!--
-            <video id="background-video" autoplay loop muted poster="./img/bckVid2.mp4">
-            <source src="./img/bckVid2.mp4" type="video/mp4">
-        </video>
-
-        <-->
-
-            <video id="background-video" autoplay loop muted poster="./img/bckVid3.mp4">
+        <video id="background-video" autoplay loop muted poster="./img/bckVid3.mp4">
             <source src="./img/bckVid3.mp4" type="video/mp4">
         </video>
-
-
-
-
         <!--lOADER-->
         <div id="spinner" class="show  position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-grow text-primary" role="status"></div>
@@ -113,12 +100,12 @@
                         </div>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <button class=" carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon iconCar" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="carousel-control-next-icon iconCar" aria-hidden="true"></span>
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
@@ -176,10 +163,10 @@
         <section id="about" class="container-xxl py-6">
             <div class="container">
                 <div class="row g-5 ">
-                    <div class="col-lg-6 wow fadeInUp shadow" data-wow-delay="0.1s">
+                    <div class="col-lg-6 wow fadeInUp " data-wow-delay="0.1s">
                         <div class="position-relative overflow-hidden ps-5 pt-5 h-100" style="min-height: 400px">
-                            <img class="position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
-                            <img class="position-absolute top-0 start-0  pe-3 pb-3" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
+                            <img class=" shadow position-absolute w-100 h-100" src="img/about-1.webp" alt="" style="object-fit: cover" />
+                            <img class=" position-absolute top-0 start-0  pe-3 pb-3" src="img/about-2.webp" alt="" style="width: 200px; height: 200px" />
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeInUp shadow" data-wow-delay="0.5s">
@@ -354,7 +341,7 @@
             </div>
         </section>
         <!--TESTIMONIES-->
-        <section id="témoignages" class="container-xxl py-6">
+        <section id="témoignages" class="shadow container-xxl py-6">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px">
                     <h1 class="display-6 mb-4 title">Témoignages d'enseignants</h1>
@@ -362,6 +349,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8 wow fadeInUp testiW" data-wow-delay="0.1s">
                         <div class="owl-carousel testimonial-carousel">
+
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant ?<-->
@@ -379,6 +367,7 @@
                                 <h5>Professeur Xavier</h5>
                                 <span>Directeur / télépathe</span>
                             </div>
+
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant<-->
@@ -399,6 +388,7 @@
                                 <h5>Florence Cibba</h5>
                                 <span>Departement Psychologie, Lettres, Langues & Histoire</span>
                             </div>
+
                             <div class="testimonial-item text-center">
                                 <div class="position-relative mb-5">
                                     <!--Mettre photo enseignant<-->
